# splitwise-cli

./: Cargo.toml  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  display.rs  main.rs  models.rs  tui.rs
