[package]
name = "splitwise-cli"
version = "0.1.0"
edition = "2024"
description = "A command-line interface for Splitwise"
license = "MIT"
repository = "https://github.com/odysa/splitwise-cli"
keywords = ["splitwise", "cli", "expense", "finance"]
categories = ["command-line-utilities"]

[[bin]]
name = "splitwise"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
