[package]
name = "splitwise-cli"
version = "0.1.0"
edition = "2024"
description = "A command-line interface for Splitwise"
license = "MIT"
repository = "https://github.com/odysa/splitwise-cli"
keywords = ["splitwise", "cli", "expense", "finance"]
categories = ["command-line-utilities"]

[[bin]]
name = "splitwise"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
crossterm = "0.28"
home = "0.5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { version = "2", features = ["https-native"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
